--- a/charts/myapp/templates/api-chat-bd.yaml
+++ b/charts/myapp/templates/api-chat-bd.yaml
@@ -31,6 +31,13 @@ spec:
         - name: {{ .name }}
           value: {{ .value | quote }}
         {{- end }}
+        {{- range .Values.apiChatBd.envFromSecret }}
+        - name: {{ .name }}
+          valueFrom:
+            secretKeyRef:
+              name: {{ .secretName }}
+              key: {{ .secretKey }}
+        {{- end }}
         resources:
           {{- toYaml .Values.apiChatBd.resources | nindent 10 }}
         volumeMounts:
